--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid" id="register-jumbo">
     <div class="container" id="jumbotron">
         <h1 class="display-4">CriShipped</h1>
         <p class="lead">A resource for finding and distributing limited supplies during emergencies.</p>
