added nav bar to index

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,7 +19,7 @@
     }
 </style>
 <div class="login-container">
-    <h1>Login</h1>
+    <h1>CriShipped Login</h1>
 
     {{#each messages.error}}
     <div class="alert alert-danger" role="alert">{{this}}</div>
