--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,22 +1,41 @@
-{{#each messages.error}}
+{{!-- {{#each messages.error}}
 <div class="alert alert-danger" role="alert">{{this}}</div>
 {{/each}}
 
 {{#each messages.success}}
 <div class="alert alert-success" role="alert">{{this}}</div>
-{{/each}}
+{{/each}} --}}
 
-
-<div class="container">
-    <h1>Hi {{ name }}</h1>
-
-    {{!-- Main page code goes here --}}
-
-
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+        CriShipped
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Find Supplies</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sell Supplies</a>
+            </li>
+        </ul>
+    </div>
     <form action="/logout?_method=DELETE" method="POST">
         <button class="btn btn-danger" type="submit">
             Log Out
         </button>
     </form>
+</nav>
+<div class="container">
+    <h1>Hi {{ name }}</h1>
+
+    {{!-- Main page code goes here --}}
+
 </div>
