--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -3,7 +3,7 @@
         <h1 class="display-4">CriShipped</h1>
         <p class="lead">A resource for finding and distributing limited supplies during emergencies.</p>
         <p class="lead">
-            <a class="btn btn-success btn-lg" href="#" id="go">Sign up</a>
+            <a class="btn btn-primary btn-lg" href="#" id="go">Sign up</a>
         </p>
     </div>
 </div>
