--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -49,3 +49,9 @@ a {
 .alert {
   width: 400px;
 }
+
+#login {
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 15px;
+  padding: 20px;
+}
