--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,22 @@
-{{!-- {{#each messages.error}}
-<div class="alert alert-danger" role="alert">{{this}}</div>
-{{/each}}
+<style>
+    body {
+        color: azure;
+    }
 
-{{#each messages.success}}
-<div class="alert alert-success" role="alert">{{this}}</div>
-{{/each}} --}}
-
+    body::after {
+        content: "";
+        background: url("/images/flood.jpg");
+        background-size: cover;
+        background-position-y: top;
+        opacity: 0.5;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        z-index: -1;
+    }
+</style>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
         CriShipped
@@ -28,7 +39,7 @@
         </ul>
     </div>
     <form action="/logout?_method=DELETE" method="POST">
-        <button class="btn btn-danger" type="submit">
+        <button class="btn btn-sm btn-danger" type="submit">
             Log Out
         </button>
     </form>
@@ -49,3 +60,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/index.js"></script>
