--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -6,3 +6,15 @@
     <a href="/">← Back To Home</a>
   </div>
 </div>
+
+{{!-- {% extends "layout.html" %}
+
+{% block content %}
+
+<div>
+  <div>{{message}}</div>
+  <div>{{error.status}}</div>
+  <pre>{{error.stack}}</pre>
+</div>
+
+{% endblock %} --}}
