views, css, compiled the scss, partial stylin, main, stylin, carshipped stylin

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,8 +21,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }} - CriShipped</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/stylesheets/bmes.css" />
-  <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+    <link rel="stylesheet" type="text/css" href="/public/styles/crishipped.css" />
+  <link rel="stylesheet" type="text/css" href="/public/styles/main.css" />
 </head>
 
 <body>
