added user profiles

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -56,6 +56,12 @@ a {
   padding: 20px;
 }
 
-.card-body {
+.grid-container {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr;
+}
+
+.card {
   color: black;
 }
