--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -18,8 +18,12 @@
     {{/each}}
     <form id="register" action="/register" method="POST">
         <div class="form-group">
-            <label for="name">Username:</label>
+            <label for="name">Name:</label>
             <input type="text" class="form-control" name="name" id="name" required>
+        </div>
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" class="form-control" name="username" id="username" required>
         </div>
         <div class="form-group">
             <label for="username">Email:</label>
