--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,53 +17,27 @@
         z-index: -1;
     }
 </style>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="navbar-brand">
-        CriShipped
-    </div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Find Supplies</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Sell Supplies</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/api/examples">Discussion Forum</a>
-            </li>
-        </ul>
-    </div>
-    <form action="/logout?_method=DELETE" method="POST">
-        <button class="btn btn-sm btn-danger" type="submit">
-            Log Out
-        </button>
-    </form>
-</nav>
+{{> nav}}
 <div class="container">
     <h1>Hi {{ name }}</h1>
-    {{#each examples}}
-    <div class="card mt-4">
-        <div class="card-body">
-            <h5 class="card-title">Example</h5>
-            <p>
-                <strong>ID:</strong> {{this.id}}</p>
-            </p>
-            <p>
-                <strong>Text</strong>: {{this.text}}</p>
-            </p>
-            <strong>Description:</strong> {{this.description}}
-            </p>
+    <div class="grid-container">
+        {{#each examples}}
+        <div class="card mt-4" id="card-{{this.id}}">
+            <div class="card-body">
+                <h5 class="card-title">Example</h5>
+                <p>
+                    <strong>ID:</strong> {{this.id}}</p>
+                </p>
+                <p>
+                    <strong>Text</strong>: {{this.text}}</p>
+                </p>
+                <strong>Description:</strong> {{this.description}}
+                </p>
+            </div>
         </div>
+        {{/each}}
     </div>
-    {{/each}}
+
 
 </div>
 
