--- a/views/cataloguedm/partials/product_list.handlebars
+++ b/views/cataloguedm/partials/product_list.handlebars
@@ -1,6 +1,42 @@
 <div class="container">
   <div class="row">
     <div class="pull-right">
+      {{ include 'partials/pagination.html'}}
+    </div>
+  </div>
+  <hr class="product-list__upper-horizontal-line" style="margin-bottom: 25px;"/>
+  <div class="row">
+    {{if page_object.length}}
+    {{ for product in page_object }}
+    <div class="col-md-4">
+      {{ include 'partials/product_list_item.html'}}
+    </div>
+    {{ endfor }}
+
+    {{else}}
+    <div class="product-list__empty-notifier">
+      <p>
+        There are no products that match your filters.
+      </p>
+      <p>
+        Try a different combination or contact customer service for further assistance.
+      </p>
+    </div>
+    {{ endif}}
+  </div>
+  <hr class="product-list__lower-horizontal-line" style="margin-bottom: 4px;"/>
+  <div class="row">
+    <div class="pull-right">
+      {{ include 'partials/pagination.html'}}
+    </div>
+  </div>
+</div>
+
+
+
+{{!-- <div class="container">
+  <div class="row">
+    <div class="pull-right">
       {% include 'partials/pagination.html'%}
     </div>
   </div>
@@ -30,4 +66,4 @@
       {% include 'partials/pagination.html'%}
     </div>
   </div>
-</div>
+</div> --}}
