--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -18,7 +18,20 @@
                 <a class="nav-link" href="#">Sell Supplies</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/api/examples">Discussion Forum</a>
+                <a class="nav-link" href="#">Discussion Forum</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Account
+                </a>
+
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="/myaccount">Edit my profile</a>
+                    <a class="dropdown-item" href="/api/home" target="_blank">Index page api</a>
+                    <a class="dropdown-item" href="/api/users" target="_blank">Users api</a>
+                </div>
+
             </li>
         </ul>
     </div>
