--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -17,9 +17,18 @@
     <div class="alert alert-success" role="alert">{{this}}</div>
     {{/each}}
     <form id="register" action="/register" method="POST">
-        <div class="form-group">
-            <label for="name">Name:</label>
-            <input type="text" class="form-control" name="name" id="name" required>
+        <div class="grid-container">
+            <div><strong>Name</strong></div>
+            <div></div>
+            <div class="form-group">
+                <label for="firstName">First:</label>
+                <input type="text" value="{{ firstName }}" class="form-control" name="firstName" id="firstName"
+                    required>
+            </div>
+            <div class="form-group">
+                <label for="lastName">Last:</label>
+                <input type="text" value="{{ lastName}}" class="form-control" name="lastName" id="lastName" required>
+            </div>
         </div>
         <div class="form-group">
             <label for="username">Username:</label>
@@ -40,5 +49,3 @@
     </p>
 
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/register.js"></script>
