--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -9,6 +9,7 @@ body {
   padding: 0;
 }
 
+/* Registration and login page styling */
 #register-jumbo {
   background: url("/images/empty.jpg");
   background-image: brightness(50%) saturate(140%);
@@ -22,12 +23,6 @@ body {
   padding-top: 150px;
 }
 
-/* #jumbotron {
-  background: rgba(255, 255, 255, 0.5);
-  border-radius: 15px;
-  padding: 20px;
-} */
-
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
@@ -35,6 +30,11 @@ body {
 a {
   color: #00b7ff;
   text-decoration: none;
+}
+
+/* setting color for h1 on index page */
+.container h1 {
+  color: #353b40;
 }
 
 .register-container {
@@ -58,22 +58,40 @@ a {
   padding: 20px;
 }
 
+/* CSS grid for cards on index page, registration form, and profile editing */
 .grid-container {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr 1fr;
 }
 
+/* Desiging main cards on index page */
 #card {
+  background-color: #353b40;
+  color: azure;
   min-height: 150px;
 }
 
 #card:hover {
   cursor: pointer;
-  border: solid black 1px;
+  border: solid azure 2px;
 }
 
+/* Getting rid of link text decoration such as underlining */
 .grid-container a {
   text-decoration: none;
   color: black;
+}
+
+/* styling for profile and account editing pages */
+.profile-container,
+.account-container {
+  margin: auto;
+  margin-top: 10px;
+  padding: 30px;
+  color: black;
+  background-color: azure;
+  border-radius: 15px;
+  width: 80%;
+  align-self: center;
 }
