--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,5 +1,7 @@
+{{> style}}
 {{> nav}}
-<div class="container">
+<div class="account-container">
+    {{> messages}}
     <h2>Edit your profile</h2>
     <form action="/myaccount" method="POST">
         <div class="form-group">
@@ -45,5 +47,6 @@
         <button class="btn btn-primary">Update</button>
     </form>
 
-    <p><a href="/users/{{username}}">View your profile</a></p>
+    <p><a href="/users/{{ username }}">View your profile</a></p>
 </div>
+<br><br><br><br>
