--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,13 +9,7 @@
 <div class="login-container">
     <h1>CriShipped Login</h1>
 
-    {{#each messages.error}}
-    <div class="alert alert-danger" role="alert">{{this}}</div>
-    {{/each}}
-
-    {{#each messages.success}}
-    <div class="alert alert-success" role="alert">{{this}}</div>
-    {{/each}}
+    {{> messages}}
 
     <form id="login" action="/login" method="POST">
         <div class="form-group">
