--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -9,13 +9,7 @@
 </div>
 <div class="register-container">
     <h1>Register</h1>
-    {{#each messages.error}}
-    <div class="alert alert-danger" role="alert">{{this}}</div>
-    {{/each}}
-
-    {{#each messages.success}}
-    <div class="alert alert-success" role="alert">{{this}}</div>
-    {{/each}}
+    {{> messages}}
     <form id="register" action="/register" method="POST">
         <div class="grid-container">
             <div><strong>Name</strong></div>
