fixed h1 coloring error on registration page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 {{> style}}
 {{> nav}}
 <div class="container">
-    <h1>Hi {{ firstName }}</h1>
+    <h1 id="hi">Hi {{ firstName }}</h1>
     <div class="grid-container">
         <a href="/myaccount">
             <div class="card mt-4" id="card">
