changed background image to train trains (criSHIPPED)

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <style>
     body {
         background-image: url();
-        background: url("/images/flood.jpg");
+        background: url("/images/track.jpeg");
         background-size: cover;
         background-position-y: top;
     }
