--- a/views/partials/style.handlebars
+++ b/views/partials/style.handlebars
@@ -5,7 +5,7 @@
 
     body::after {
         content: "";
-        background: url("/images/flood.jpg");
+        background: url("/images/track.jpeg");
         background-size: cover;
         background-position-y: top;
         opacity: 0.5;
