improved look of account editing page

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -9,21 +9,17 @@
             <input type="text" value="{{ username }}" class="form-control" name="username" id="username" required>
         </div>
         <div class="grid-container">
-            <div><strong>Name</strong></div>
-            <div></div>
             <div class="form-group">
-                <label for="firstName">First:</label>
+                <label for="firstName">First name:</label>
                 <input type="text" value="{{ firstName }}" class="form-control" name="firstName" id="firstName"
                     required>
             </div>
             <div class="form-group">
-                <label for="lastName">Last:</label>
+                <label for="lastName">Last name:</label>
                 <input type="text" value="{{ lastName}}" class="form-control" name="lastName" id="lastName" required>
             </div>
         </div>
         <div class="grid-container">
-            <div><strong>Location</strong></div>
-            <div></div>
             <div class="form-group">
                 <label for="city">City:</label>
                 <input type="text" value="{{ city }}" class="form-control" name="city" id="city">
