--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,6 +5,10 @@
         background-size: cover;
         background-position-y: top;
     }
+
+    #login {
+        color: #353b40;
+    }
 </style>
 <div class="login-container">
     <h1>CriShipped Login</h1>
