--- a/views/cataloguedm/partials/pagination.handlebars
+++ b/views/cataloguedm/partials/pagination.handlebars
@@ -30,34 +30,34 @@
 </div>
 {% endif %} --}}
 
-{{ if page_object.length }}
+{{#if page_object.length}}
 <div class="container">
   <nav>
     <div class="custom-pagination">
       <ul class="pagination">
-        {{ if paginate.hasPreviousPages }}
-        <li><a href="{{ paginate.href(true) }}">&laquo;</a></li> 
-        {{ else }}
+        {{#if paginate.hasPreviousPages}}
+        <li><a href="{{paginate.href(true)}}">&laquo;</a></li> 
+        {{else}}
         <li class="disabled"><span>&laquo;</span></li>
-        {{ endif }}
-        {{ for page in pages }}
-        {{ if page.number }}
-        {{ if paginate.page == page.number }}
-        <li class="active"><span>{{ page.number}} <span class="sr-only">(current)</span></span></li>
-        {{ else }}
-        <li><a href="?page={{ page.number }}">{{ page.number }}</a></li>
-        {{ endif }}
-        {{ else }}
+        {{/if}}
+        {{#for page in pages}}
+        {{#if page.number}}
+        {{#if paginate.page == page.number}}
+        <li class="active"><span>{{page.number}} <span class="sr-only">(current)</span></span></li>
+        {{else}}
+        <li><a href="?page={{page.number}}">{{page.number}}</a></li>
+        {{/if}}
+        {{else}}
         <li class="disabled"><a href="#">&hellip;</a></li>
-        {{ endif }}
-        {{ endfor }}
-        {{ if paginate.hasNextPages(pageCount) }}
-        <li><a href="{{ paginate.href() }}">&raquo;</a></li>
-        {{ else }}
+        {{/if}}
+        {{/for}}
+        {{#if paginate.hasNextPages(pageCount)}}
+        <li><a href="{{paginate.href()}}">&raquo;</a></li>
+        {{else}}
         <li class="disabled"><span>&raquo;</span></li>
-        {{ endif }}
+        {{/if}}
       </ul>
     </div>
   </nav>
 </div>
-{{ endif }}
+{{/if}}
