--- a/views/cataloguedm/partials/product_list.handlebars
+++ b/views/cataloguedm/partials/product_list.handlebars
@@ -1,17 +1,17 @@
 <div class="container">
   <div class="row">
     <div class="pull-right">
-      {{ include 'partials/pagination.html'}}
+      {{#include 'partials/pagination.handlebars'}}
     </div>
   </div>
   <hr class="product-list__upper-horizontal-line" style="margin-bottom: 25px;"/>
   <div class="row">
-    {{if page_object.length}}
-    {{ for product in page_object }}
+    {{#if page_object.length}}
+    {{#for product in page_object}}
     <div class="col-md-4">
-      {{ include 'partials/product_list_item.html'}}
+      {{#include 'partials/product_list_item.handlebars'}}
     </div>
-    {{ endfor }}
+    {{/for}}
 
     {{else}}
     <div class="product-list__empty-notifier">
@@ -22,12 +22,12 @@
         Try a different combination or contact customer service for further assistance.
       </p>
     </div>
-    {{ endif}}
+    {{/if}}
   </div>
   <hr class="product-list__lower-horizontal-line" style="margin-bottom: 4px;"/>
   <div class="row">
     <div class="pull-right">
-      {{ include 'partials/pagination.html'}}
+      {{#include 'partials/pagination.handlebars'}}
     </div>
   </div>
 </div>
