--- a/views/cataloguedm/partials/category.handlebars
+++ b/views/cataloguedm/partials/category.handlebars
@@ -10,12 +10,12 @@
 {% endfor %} --}}
 
 <h5 class="category__heading">Categories</h5>
-{{ for c in categories }}      
+{{#for c in categories}}      
 <div class="category__list-wrapper">
-  {{ if c.slug == selected_category}}
-  <a href="/catalogue/{{c.slug}}/{{selected_brand}}/" class="category__selected">{{ c.name }}</a>
-  {{ else }}
+  {{#if c.slug == selected_category}}
+  <a href="/catalogue/{{c.slug}}/{{selected_brand}}/" class="category__selected">{{c.name}}</a>
+  {{else}}
   <a href="/catalogue/{{c.slug}}/{{selected_brand}}/" class="category__not-selected">{{ c.name }}</a>
-  {{ endif }}
+  {{/if}}
 </div>
-{{ endfor }}
+{{/for}}
