--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,58 +1,16 @@
-{{!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <title>Home Page</title>
+  <title>CriShipped Home Page</title>
 </head>
 
 <body>
   {{{body}}}
 </body>
 
-</html> --}}
-
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ title }} - CriShipped</title>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/public/styles/crishipped.css" />
-  <link rel="stylesheet" type="text/css" href="/public/styles/main.css" />
-</head>
-
-<body>
-<div class="navbar navbar-default navbar-static-top layout__nav-wrapper">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <div class="layout__nav-brand-wrapper">
-        <a href="/" class="layout__nav-brand">CriShipped</a>
-      </div>
-    </div>
-    <div class="navbar-collapse collapse navbar-right layout__cart-wrapper">
-      <ul class="nav navbar-nav">
-        {{!-- <li>{% include 'cart_summary_widget.html' %}</li> --}}
-      </ul>
-    </div>
-  </div>
-</div>
-
-<div class="container body-content layout__content-wrapper">
-  {% block content %}{% endblock %}
-  <hr />
-  <footer>
-    <p class="layout__copyright">&copy; {{ year }} - CriShipped</p>
-  </footer>
-</div>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-</body>
 </html>
