added FAQ section from Andrea

--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -23,13 +23,12 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Account
+                    Account and FAQs
                 </a>
 
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="/myaccount">Edit my profile</a>
-                    <a class="dropdown-item" href="/api/home" target="_blank">Index page api</a>
-                    <a class="dropdown-item" href="/api/users" target="_blank">Users api</a>
+                    <a class="dropdown-item" href="/faqs">Rules and FAQs</a>
                 </div>
 
             </li>
