--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -80,7 +80,7 @@ a {
 /* Getting rid of link text decoration such as underlining */
 .grid-container a {
   text-decoration: none;
-  color: black;
+  color: #353b40;
 }
 
 /* styling for profile and account editing pages */
@@ -89,9 +89,71 @@ a {
   margin: auto;
   margin-top: 10px;
   padding: 30px;
-  color: black;
+  color: #353b40;
   background-color: white;
   border-radius: 15px;
   width: 80%;
   align-self: center;
+}
+
+/* FAQ css styling */
+
+.faq-container {
+  margin: 25px;
+  padding: 25px;
+  background-color: white;
+  color: #353b40;
+  border-radius: 15px;
+}
+
+dl.faq button {
+  margin: 0;
+  padding: 0;
+  margin-top: 1em;
+  font-weight: bold;
+  font-size: 110%;
+  border: thin solid transparent;
+  background-color: transparent;
+  padding-left: 0.125em;
+}
+
+dl dd {
+  margin: 0;
+  padding: 0;
+  margin-left: 1.5em;
+}
+
+dl.faq .desc {
+  margin: 0;
+  padding: 0.5em;
+  font-size: 110%;
+  display: none;
+  background-color: #fffedb;
+}
+
+dl.faq button:hover,
+dl.faq button:focus {
+  background-color: #eee;
+}
+
+dl.faq button:focus {
+  border-color: #630;
+}
+
+dl.faq button:hover {
+  text-decoration: underline;
+}
+
+dl.faq button:active {
+  background-color: #bbb;
+}
+
+dl.faq button[aria-expanded="false"]::before {
+  content: url("../images/right-arrow-brown.png");
+  padding-right: 0.35em;
+}
+
+dl.faq button[aria-expanded="true"]::before {
+  content: url("../images/down-arrow-brown.png");
+  padding-right: 0.35em;
 }
