rearranged file structure and re set the view engine

--- a/views/catalogue.handlebars
+++ b/views/catalogue.handlebars
@@ -11,7 +11,7 @@
         {{#include '/cataloguedm/partials/category.handlebars'}}
       </div>
       <div>
-        {{#include 'partials/brand.handlebars'}}
+        {{#include '/cataloguedm/partials/brand.handlebars'}}
       </div>
     </div>
     <div class="col-md-9 {{#if page_object}}index__product-wrapper--has-pages{{else}}index__product-wrapper--no-pages{{/if}}">
