--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,7 +33,7 @@
   </div>
 
   <div class="container body-content layout__content-wrapper">
-    {{#block}}{{#content}} {{/content}}{{/block}}
+    {{#block content}}{{/block}}
     <hr />
     <footer>
       <p class="layout__copyright">&copy; {{year}} - CriShipped</p>
