--- a/views/catalogue.handlebars
+++ b/views/catalogue.handlebars
@@ -1,6 +1,6 @@
-{{#extends "index"}}
+{{#extend ">index"}}
 
-{{#block}} {{#content}}{{/content}}
+{{#block content}} 
 
 <div class="container">
   <div class="row">
@@ -8,44 +8,19 @@
       <h4 class="index__filter-title">Filter By</h4>
       <hr />
       <div>
-        {{#include '/cataloguedm/partials/category.handlebars'}}
+        {{'partials/category.handlebars'}}
       </div>
       <div>
-        {{#include '/cataloguedm/partials/brand.handlebars'}}
+        {{'partials/brand.handlebars'}}
       </div>
     </div>
     <div class="col-md-9 {{#if page_object}}index__product-wrapper--has-pages{{else}}index__product-wrapper--no-pages{{/if}}">
-      {{#include '/cataloguedm/partials/product_list.handlebars'}}
+      {{'partials/product_list.handlebars'}}
     </div>
   </div>
 </div>
 
 
 {{/block}}
+{{/extend}}
 
-
-
-{{!-- {% extends "layout.html" %}
-
-{% block content %}
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-3 index__filter-wrapper">
-      <h4 class="index__filter-title">Filter By</h4>
-      <hr />
-      <div>
-        {% include 'partials/category.html' %}
-      </div>
-      <div>
-        {% include 'partials/brand.html' %}
-      </div>
-    </div>
-    <div class="col-md-9 {% if page_object %}index__product-wrapper--has-pages{%else%}index__product-wrapper--no-pages{% endif%}">
-      {% include 'partials/product_list.html' %}
-    </div>
-  </div>
-</div>
-
-
-{% endblock %} --}}
