converting username to slugs

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,6 +12,7 @@
                 </div>
             </div>
         </a>
+        {{!-- Params are converted to lowercase in the backend, so slug is not needed here --}}
         <a href="/users/{{ username }}">
             <div class="card mt-4" id="card">
                 <div class="card-body">
