--- a/views/partials/category.handlebars
+++ b/views/partials/category.handlebars
@@ -9,13 +9,13 @@
 </div>
 {% endfor %} --}}
 
-<h5 class="category__heading">Categories</h5>
+<h5 class="category_heading">Categories</h5>
 {{#for c in categories}}      
-<div class="category__list-wrapper">
+<div class="category_list-wrapper">
   {{#if c.slug == selected_category}}
-  <a href="/cataloguedm/catalogue/{{c.slug}}/{{selected_brand}}/" class="category__selected">{{c.name}}</a>
+  <a href="/catalogue/{{c.slug}}/{{selected_brand}}/" class="category_selected">{{c.name}}</a>
   {{else}}
-  <a href="/cataloguedm/catalogue/{{c.slug}}/{{selected_brand}}/" class="category__not-selected">{{ c.name }}</a>
+  <a href="/catalogue/{{c.slug}}/{{selected_brand}}/" class="category_not-selected">{{ c.name }}</a>
   {{/if}}
 </div>
 {{/for}}
