--- a/views/catalogue.handlebars
+++ b/views/catalogue.handlebars
@@ -1,11 +1,11 @@
-{{#extend "index"}}
+{{!-- {{#extend "index"}}
 
 {{#block content}} 
 
 <div class="container">
   <div class="row">
-    <div class="col-md-3 index__filter-wrapper">
-      <h4 class="index__filter-title">Filter By</h4>
+    <div class="col-md-3 index_filter-wrapper">
+      <h4 class="index_filter-title">Filter By</h4>
       <hr />
       <div>
         {{'partials/category.handlebars'}}
@@ -14,7 +14,7 @@
         {{'partials/brand.handlebars'}}
       </div>
     </div>
-    <div class="col-md-9 {{#if page_object}}index__product-wrapper--has-pages{{else}}index__product-wrapper--no-pages{{/if}}">
+    <div class="col-md-9 {{#if page_object}}index_product-wrapper-has-pages{{else}}index_product-wrapper-no-pages{{/if}}">
       {{'partials/product_list.handlebars'}}
     </div>
   </div>
@@ -22,5 +22,5 @@
 
 
 {{/block}}
-{{/extend}}
+{{/extend}} --}}
 
