--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="navbar navbar-default navbar-static-top layout__nav-wrapper">
+  <div class="navbar navbar-default navbar-static-top layout_nav-wrapper">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -20,11 +20,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <div class="layout__nav-brand-wrapper">
-          <a href="/" class="layout__nav-brand">CriShipped</a>
+        <div class="layout_nav-brand-wrapper">
+          <a href="/" class="layout_nav-brand">CriShipped</a>
         </div>
       </div>
-      <div class="navbar-collapse collapse navbar-right layout__cart-wrapper">
+      <div class="navbar-collapse collapse navbar-right layout_cart-wrapper">
         <ul class="nav navbar-nav">
           {{!-- <li>{% include 'cart_summary_widget.html' %}</li> --}}
         </ul>
@@ -32,11 +32,29 @@
     </div>
   </div>
 
-  <div class="container body-content layout__content-wrapper">
-    {{#block content}}{{/block}}
+  <div class="container body-content layout_content-wrapper">
+    {{!-- {{#block content}}{{/block}} --}}
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 index_filter-wrapper">
+          <h4 class="index_filter-title">Filter By</h4>
+          <hr />
+          <div>
+            {{'partials/category.handlebars'}}
+          </div>
+          <div>
+            {{'partials/brand.handlebars'}}
+          </div>
+        </div>
+        <div class="col-md-9 {{#if page_object}}index_product-wrapper-has-pages{{else}}index_product-wrapper-no-pages{{/if}}">
+          {{'partials/product_list.handlebars'}}
+        </div>
+      </div>
+    </div>
     <hr />
     <footer>
-      <p class="layout__copyright">&copy; {{year}} - CriShipped</p>
+      <p class="layout_copyright">&copy; {{year}} - CriShipped</p>
     </footer>
   </div>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
