--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,8 +33,10 @@
   </div>
 
   <div class="container body-content layout_content-wrapper">
-    {{!-- {{#block content}}{{/block}} --}}
+    {{!-- {{#block 'catalogue'}}{{/block}} --}}
 
+
+{{!-- catalogue code --}}
     <div class="container">
       <div class="row">
         <div class="col-md-3 index_filter-wrapper">
@@ -52,6 +54,8 @@
         </div>
       </div>
     </div>
+
+
     <hr />
     <footer>
       <p class="layout_copyright">&copy; {{year}} - CriShipped</p>
