changed syntax on index handlebars for the partials, got to a new error

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,14 +43,18 @@
           <h4 class="index_filter-title">Filter By</h4>
           <hr />
           <div>
-            {{'partials/category.handlebars'}}
+            {{> category}}
+            {{!-- {{'partials/category.handlebars'}} --}}
           </div>
           <div>
-            {{'partials/brand.handlebars'}}
+            {{> brand}}
+            {{!-- {{'partials/brand.handlebars'}} --}}
           </div>
         </div>
         <div class="col-md-9 {{#if page_object}}index_product-wrapper-has-pages{{else}}index_product-wrapper-no-pages{{/if}}">
-          {{'partials/product_list.handlebars'}}
+          {{> product_list}}
+          {{!-- {{'partials/product_list.handlebars'}} --}}
+          
         </div>
       </div>
     </div>
