fixed the cslug equals selected category is true line 15 category handlebars

--- a/views/partials/category.handlebars
+++ b/views/partials/category.handlebars
@@ -12,7 +12,7 @@
 <h5 class="category_heading">Categories</h5>
 {{#for c in categories}}      
 <div class="category_list-wrapper">
-  {{#if c.slug == selected_category}}
+  {{#if (c.slug selected_category)true}}
   <a href="/catalogue/{{c.slug}}/{{selected_brand}}/" class="category_selected">{{c.name}}</a>
   {{else}}
   <a href="/catalogue/{{c.slug}}/{{selected_brand}}/" class="category_not-selected">{{ c.name }}</a>
