--- a/views/partials/category.handlebars
+++ b/views/partials/category.handlebars
@@ -10,7 +10,8 @@
 {% endfor %} --}}
 
 <h5 class="category_heading">Categories</h5>
-{{#for c in categories}}      
+{{#each categories as |c|}}  
+{{!-- {{#for c in categories}}       --}}
 <div class="category_list-wrapper">
   {{#if (c.slug selected_category)true}}
   <a href="/catalogue/{{c.slug}}/{{selected_brand}}/" class="category_selected">{{c.name}}</a>
@@ -18,4 +19,5 @@
   <a href="/catalogue/{{c.slug}}/{{selected_brand}}/" class="category_not-selected">{{ c.name }}</a>
   {{/if}}
 </div>
-{{/for}}
+{{/each}}
+{{!-- {{/for}} --}}
