--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,11 +23,11 @@
             </div>
         </a>
         {{#if city}}
-        <a href="/">
+        <a href="/location/{{city}}">
             <div class="card mt-4" id="card">
                 <div class="card-body">
                     <h5 class="card-title">{{city}} Infomation</h5>
-                    <p>Get the latest news and information for {{city}}, {{state}}. Connect with nearby users.</p>
+                    <p>Get the latest news and information for {{city}}, {{state}}</p>
                 </div>
             </div>
         </a>
