--- a/views/partials/category.handlebars
+++ b/views/partials/category.handlebars
@@ -10,7 +10,8 @@
 {% endfor %} --}}
 
 <h5 class="category_heading">Categories</h5>
-{{#each categories as |c|}}  
+{{#each c as |categories|}}  
+{{!-- {{#each categories as |c|}}   --}}
 {{!-- {{#for c in categories}}       --}}
 <div class="category_list-wrapper">
   {{#if (c.slug selected_category)true}}
