--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Find Supplies</a>
+                <a class="nav-link" href="/catalogue">Find Supplies</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Sell Supplies</a>
