fixed JAWS.DB connection

--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -4,6 +4,42 @@
 <div class="location-container bg-white">
     <h4 id="map-h4">{{location.city}} Information</h4>
     <hr>
+    <div class="forecast-table">
+        <div class="container">
+            <div class="forecast-container">
+                <div class="today forecast">
+                    <div class="forecast-header">
+                        <div class="day">Current</div>
+                        <div class="date"></div>
+                    </div> <!-- .forecast-header -->
+                    <div class="forecast-content">
+                        <div class="location">{{ weather.name }}</div>
+                        <div class="degree">
+                            <div class="num">{{ weather.main.temp }}<sup>o</sup>F</div>
+                            <div class="forecast-icon">
+                                <img src="images/icons/icon-1.svg" alt="" width=90>
+                            </div>
+                        </div>
+                        <span><img src="images/icon-umberella.png" alt="">Humidity: {{ weather.main.humidity }}%</span>
+                        <span><img src="images/icon-wind.png" alt="">{{ weather.wind.speed }}km/h</span>
+                        <span><img src="images/icon-compass.png" alt=""></span>
+                    </div>
+                </div>
+                <div class="forecast">
+                    <div class="forecast-header">
+                        <div class="day">Tuesday</div>
+                    </div> <!-- .forecast-header -->
+                    <div class="forecast-content">
+                        <div class="forecast-icon">
+                            <img src="images/icons/icon-3.svg" alt="" width=48>
+                        </div>
+                        <div class="degree">23<sup>o</sup>C</div>
+                        <small>18<sup>o</sup></small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="grid-container">
         <div class="col">
             <div id="map"></div>
